2009-12-20  Martin Robinson  <martin.james.robinson@gmail.com>

        Reviewed by Xan Lopez.

        [GTK] Remove more GTK+ and GLib headers from WebCore
        https://bugs.webkit.org/show_bug.cgi?id=32795

        Remove most GTK+ and GLib includes from WebCore headers.

        * platform/graphics/cairo/GraphicsContextPlatformPrivateCairo.h:
        * platform/gtk/PasteboardHelper.h:
        * platform/gtk/RenderThemeGtk.cpp:
        * platform/gtk/RenderThemeGtk.h:
        * platform/gtk/ScrollbarGtk.cpp:
        * platform/gtk/ScrollbarThemeGtk.h:
        * platform/gtk/gtk2drawing.c:
        * platform/gtk/gtkdrawing.h:

2009-12-20  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] build fixes after recent changes.

        * bindings/BindingSecurityBase.cpp: Removed V8 header in common code.
        * platform/wx/ContextMenuWx.cpp: Added missing header.
        * plugins/mac/PluginViewMac.cpp: Added missing header.

2009-12-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Hopefully fix the assertion we are hitting by not forcing updating
        the state of scrollbars when setting the adjustments. This was
        leading to a premature layout.

        fast/dom/open-and-close-by-DOM.html
        fast/dom/Window/closure-access-after-navigation-window.html
        fast/harness/use-page-cache.html

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::setGtkAdjustments):

2009-12-20  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Darin Adler.

        Web Inspector: Constrain the number of messages the inspector shows.

        https://bugs.webkit.org/show_bug.cgi?id=20919

        * English.lproj/localizedStrings.js:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::InspectorController):
        (WebCore::InspectorController::addConsoleMessage):
        (WebCore::InspectorController::clearConsoleMessages):